增加浏览器缓存、验证码

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>websocket</title>
+    <script src="./test.js"></script>
 </head>
 <body>
     聊天室demo接口
